Add GetCustomers method to the api client and corresponding tests

--- a/src/WilliamHill.RaceDay.ApiClients/WilliamHill.RaceDay.ApiClients.csproj
+++ b/src/WilliamHill.RaceDay.ApiClients/WilliamHill.RaceDay.ApiClients.csproj
@@ -1,7 +1,12 @@
-<Project Sdk="Microsoft.NET.Sdk">
-
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
-
+  <ItemGroup>
+    <ProjectReference Include="..\WilliamHill.RaceDay.Contracts\WilliamHill.RaceDay.Contracts.csproj" />
+    <ProjectReference Include="..\WilliamHill.RaceDay.Models\WilliamHill.RaceDay.Models.csproj" />
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="10.0.3" />
+  </ItemGroup>
 </Project>
