--- a/src/WilliamHill.RaceDay.Contracts/WilliamHill.RaceDay.Contracts.csproj
+++ b/src/WilliamHill.RaceDay.Contracts/WilliamHill.RaceDay.Contracts.csproj
@@ -1,7 +1,8 @@
-<Project Sdk="Microsoft.NET.Sdk">
-
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
-
+  <ItemGroup>
+    <ProjectReference Include="..\WilliamHill.RaceDay.Models\WilliamHill.RaceDay.Models.csproj" />
+  </ItemGroup>
 </Project>
