--- a/src/WilliamHill.RaceDay.Tests/WilliamHill.RaceDay.Tests.csproj
+++ b/src/WilliamHill.RaceDay.Tests/WilliamHill.RaceDay.Tests.csproj
@@ -1,15 +1,16 @@
-<Project Sdk="Microsoft.NET.Sdk">
-
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>netcoreapp2.0</TargetFramework>
-
     <IsPackable>false</IsPackable>
   </PropertyGroup>
-
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.5.0" />
     <PackageReference Include="MSTest.TestAdapter" Version="1.2.0" />
     <PackageReference Include="MSTest.TestFramework" Version="1.2.0" />
   </ItemGroup>
-
+  <ItemGroup>
+    <ProjectReference Include="..\WilliamHill.RaceDay.ApiClients\WilliamHill.RaceDay.ApiClients.csproj" />
+    <ProjectReference Include="..\WilliamHill.RaceDay.Contracts\WilliamHill.RaceDay.Contracts.csproj" />
+    <ProjectReference Include="..\WilliamHill.RaceDay.Models\WilliamHill.RaceDay.Models.csproj" />
+  </ItemGroup>
 </Project>
