--- a/src/WilliamHill.RaceDay.Services/WilliamHill.RaceDay.Services.csproj
+++ b/src/WilliamHill.RaceDay.Services/WilliamHill.RaceDay.Services.csproj
@@ -2,4 +2,8 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\WilliamHill.RaceDay.Contracts\WilliamHill.RaceDay.Contracts.csproj" />
+    <ProjectReference Include="..\WilliamHill.RaceDay.Models\WilliamHill.RaceDay.Models.csproj" />
+  </ItemGroup>
 </Project>
