--- a/src/WilliamHill.RaceDay.Tests/WilliamHill.RaceDay.Tests.csproj
+++ b/src/WilliamHill.RaceDay.Tests/WilliamHill.RaceDay.Tests.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.5.0" />
+    <PackageReference Include="Moq" Version="4.7.145" />
     <PackageReference Include="MSTest.TestAdapter" Version="1.2.0" />
     <PackageReference Include="MSTest.TestFramework" Version="1.2.0" />
   </ItemGroup>
@@ -12,5 +13,6 @@
     <ProjectReference Include="..\WilliamHill.RaceDay.ApiClients\WilliamHill.RaceDay.ApiClients.csproj" />
     <ProjectReference Include="..\WilliamHill.RaceDay.Contracts\WilliamHill.RaceDay.Contracts.csproj" />
     <ProjectReference Include="..\WilliamHill.RaceDay.Models\WilliamHill.RaceDay.Models.csproj" />
+    <ProjectReference Include="..\WilliamHill.RaceDay.Services\WilliamHill.RaceDay.Services.csproj" />
   </ItemGroup>
 </Project>
